--- a/projeto-ritmo-melodia/index.html
+++ b/projeto-ritmo-melodia/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href='https://cdn.pixabay.com/photo/2013/07/12/11/59/musical-note-145074_1280.png'/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ritmo & Melodia BR</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
   </head>
   <body>
     <div id="root"></div>
